- Images:         Removed secondary data source from images
- Listbox:        Changed "height" keyword to "num_items"
- Listbox:        "items" keyword now required
- RadioButton:    "items" keyword now required
- Combo:          "items" keyword now required
- Dummy:          "height" and "width" keyword now required
- Simple Plot:    "autoscale" keyword removed

New Commands:

- Tables:         Added "set_table_data"
- Tables:         Added "get_table_data"
- Widgets:        Added "add_value"
- Widgets:        Added "incref_value"
- Widgets:        Added "decref_value"
- Main Window:    Added "set_main_window_pos" command #193
- Inputs:         Added "get_plot_mouse_pos" command #225
- Widgets:        Added "add_time_picker" command
- Widgets:        Added "add_date_picker" command
- Widgets:        Added "get_item_type" command
- Widgets:        Added "configure_item" command
- Widgets:        Added "get_item_configuration" command
- Widgets:        Added "add_pie_series" command
- Plots:          Added "add_shade_series" command
- Plots:          Added "add_image_series" command
- Plots:          Added "add_bar_series" command
- Plots:          Added "add_error_series" command
- Plots:          Added "add_heat_series" command
- Radio Button:   Added "horizontal" keyword to radio button #215
- Radio Button:   Added "update_bounds" keyword to add_*_series commands

-----------------------------------------------------------------------
 VERSION 0.3.7 (9/14/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.3.7

Updates:
- ImPlot: upgraded to commit 4f0a09f

New Commands:
- Widgets: Added "add_image_button" command
- Plots:   Added "add_pie_chart" command
- Plots:   Added "add_pie_chart_data" command
- Plots:   Added "clear_pie_chart_data" command
- Plots:   Added "add_stem_series" command

Fixes:
- Threadpool: Fixed issue with threads freezing

